<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/question_text" />

    <TextView
        android:id="@+id/answer1_text_view"
        android:layout_width="401dp"
        android:layout_height="35dp"/>

    <TextView
        android:id="@+id/answer2_text_view"
        android:layout_width="401dp"
        android:layout_height="35dp"/>

    <TextView
        android:id="@+id/answer3_text_view"
        android:layout_width="401dp"
        android:layout_height="35dp"/>

    <TextView
        android:id="@+id/answer4_text_view"
        android:layout_width="401dp"
        android:layout_height="35dp"/>

    <TextView
        android:id="@+id/answer5_text_view"
        android:layout_width="401dp"
        android:layout_height="35dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/a_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_button_label" />

        <Button
            android:id="@+id/b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_button_label"/>

        <Button
            android:id="@+id/c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_button_label"/>

        <Button
            android:id="@+id/d_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_button_label"/>

        <Button
            android:id="@+id/e_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_button_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_button_label"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button_label"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_label"/>

    </LinearLayout>

    <LinearLayout
        android:id ="@+id/submit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/submit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>